--- a/quo-masonry/masonry.html
+++ b/quo-masonry/masonry.html
@@ -17,7 +17,7 @@ body{
 }
 
 .box{
-	background: whitesmoke;
+	background: #DCDCDC;
 	margin-bottom: 10px;
 }
 
@@ -36,10 +36,22 @@ body{
 	<script>
 	$$().ready(function(){
 		$$("#container").masonry();
+		
+		$$("#append").on("click",function(){
+			$$("#container").masonry.append($$('<div class="box" style="height:320px">14</div>'));
+		})
+		
+		$$("#prepend").on("click",function(){
+			$$("#container").masonry.prepend($$('<div class="box" style="height:260px">0</div>'));
+		})
 	})
 	</script>
 </head>
 <body>
+	<div>
+		<a href="#append" id='append'>Append</a>
+		<a href="#prepend" id='prepend'>Prepend</a>
+	</div>
 	<div id="container" class="cols">
 		<div class="box" style="height:320px">1</div>
 		<div class="box" style="height:400px">2</div>
@@ -53,6 +65,7 @@ body{
 		<div class="box" style="height:420px">10</div>
 		<div class="box" style="height:320px">11</div>
 		<div class="box" style="height:420px">12</div>
+		<div class="box" style="height:380px">13</div>
 	</div>
 </body>
 </html>
