--- a/masonry.html
+++ b/masonry.html
@@ -22,7 +22,7 @@ body{
 }
 
 </style>
-	<script src="quo.masonry.js"></script>
+	<script src="quo-masonry/quo.masonry.js"></script>
 	<script>
 	$$().ready(function(){
 		$$("#container").masonry({cols:'auto', itemWidth: 240});
